fixing alignment of link and button on login page

--- a/view/stylesheet/theme.css
+++ b/view/stylesheet/theme.css
@@ -1245,3 +1245,11 @@ legend.title {
 	font-size: 11px;
 	font-weight: bold;
 }
+
+div.left{
+	float: left;
+}
+
+div.right{
+	float: right;
+}
